fix: plugins alignment

--- a/plugins/dorion-settings/components/PluginList.tsx.scss
+++ b/plugins/dorion-settings/components/PluginList.tsx.scss
@@ -42,13 +42,13 @@
   justify-content: space-between;
   width: 100%;
 
-  padding: 16px;
+  padding: 16px 0;
 }
 
 .plistrow .scell {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: end;
   width: 30%;
 }
 
